jni-macros/tests/ui/native_method_struct/fail/raw_shorthand_wrong_return_type.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method_struct/fail/raw_shorthand_wrong_return_type.rs:21:14
   |
19 |       let _method = native_method! {
   |  ___________________-
20 | |         raw fn MyClass::myMethod() -> jint,
21 | |         fn = my_method_impl
   | |              ^^^^^^^^^^^^^^ expected fn pointer, found fn item
22 | |     };
   | |_____- expected due to this
   |
   = note: expected fn pointer `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>) -> i32`
                 found fn item `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>) -> i64 {my_method_impl}`
